--- a/admin/Pipfile
+++ b/admin/Pipfile
@@ -11,6 +11,8 @@ flask-admin = "*"
 flask-mongoengine = "*"
 flask-security = "*"
 flask-restx = "*"
+email-validator = "*"
+uwsgi = "*"
 
 [requires]
 python_version = "3.6"
