set up docker environment to easily adapt to dev or prod environments; also started working on the secured login to admin interface

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
     unity:
         build: ./unity
     db:
-        image: mongo:latest
-        ports:
-            - "27017-27019:27017-27019"
+        image: mongo
         volumes:
             - ../edanaga-mongodb:/data/db
 
