switched from using flask-restx to flask-mongorest which is more adapted to the project

--- a/rest/Pipfile
+++ b/rest/Pipfile
@@ -7,10 +7,10 @@ verify_ssl = true
 
 [packages]
 flask = "*"
-flask-restx = "*"
 flask-mongoengine = "*"
 mongoengine = "*"
 uwsgi = "*"
+flask-mongorest = "*"
 
 [requires]
 python_version = "3.6"
