--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -20,7 +20,7 @@ http {
     server {
         listen 80;
 
-        server_name admin.localhost;
+        server_name admin.edanaga.ch;
 
         location / {
             proxy_pass           http://admin;
@@ -36,7 +36,7 @@ http {
     server {
         listen 80;
 
-        server_name api.localhost;
+        server_name api.edanaga.ch;
 
         location / {
            proxy_pass           http://api;
@@ -79,7 +79,7 @@ http {
     server {
         listen 80;
 
-        server_name localhost;
+        server_name edanaga.ch www.edanaga.ch;
 
         location / {
             proxy_pass           http://unity;
