--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,58 @@
 version: "3"
+
 services:
     admin:
-        build: ./admin
+        build:
+            context: ./admin
+            dockerfile: production.Dockerfile
+        environment:
+            - MONGODB=${MONGODB}
+            - MONGOUSER=${MONGOUSER}
+            - MONGOPASS=${MONGOPASS}
+            - MONGOHOST=${MONGOHOST}
+            - SECRET_KEY=${ADMIN_SECRET_KEY}
+            - SECURITY_PASSWORD_SALT=${ADMIN_SECURITY_SALT}
+        restart: always
+        depends_on:
+            - db
     api:
-        build: ./rest
-    unity:
-        build: ./unity
-    db:
-        image: mongo
+        build:
+            context: ./rest
+            dockerfile: production.Dockerfile
         volumes:
-            - ../edanaga-mongodb:/data/db
+            - "./admin/app/crud/models.py:/opt/source-code/models.py"
+        environment:
+            - MONGODB=${MONGODB}
+            - MONGOUSER=${MONGOUSER}
+            - MONGOPASS=${MONGOPASS}
+            - MONGOHOST=${MONGOHOST}
+        restart: always
+        depends_on:
+            - db
+    unity:
+        build:
+            context: ./unity
+            dockerfile: Dockerfile
+        restart: always
+        depends_on:
+            - db
+    db:
+        image: mongo:3.4.2
+        volumas:
+            - "../edanaga-mongo/:/var/lib/mongodb"
+        environment:
+            - MONGO_INITDB_ROOT_USERNAME=${MONGOUSER}
+            - MONGO_INITDB_ROOT_PASSWORD=${MONGOPASS}
+        restart: always
 
+    nginx:
+        image: nginx:alpine
+        ports:
+            - "80:80"
+        volumes:
+            - "./nginx/prod.nginx.conf:/etc/nginx/nginx.conf"
+        restart: always
+        depends_on:
+            - admin
+            - api
+            - unity
