--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
             - "80:80"
         volumes:
             - "./nginx/prod.nginx.conf:/etc/nginx/nginx.conf"
+        environment:
+            - THREADS=${NGINXTHREADCOUNT}
         restart: always
         depends_on:
             - admin
