setup certbot for deployement

--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -17,13 +17,63 @@ http {
         server unity:5000;
     }
 
+    # HTTPS redirection
+    server {
+        listen 443 ssl;
+
+        server_name admin.edanaga.ch;
+
+        location / {
+            proxy_pass http://admin.edanaga.ch;
+        }
+
+        ssl_certificate /etc/letsencrypt/live/admin.edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/admin.edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
+    }
+
+    server {
+        listen 443 ssl;
+
+        server_name api.edanaga.ch;
+
+        location / {
+            proxy_pass http://api.edanaga.ch;
+        }
+
+        ssl_certificate /etc/letsencrypt/live/api.edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
+    }
+
+    server {
+        listen 443 ssl;
+
+        server_name edanaga.ch www.edanaga.ch;
+
+        location / {
+            proxy_pass http://edanaga.ch;
+        }
+
+        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
+    }
+
+    # HTTP applications redirecting to docker containers
     server {
         listen 80;
 
         server_name admin.edanaga.ch;
 
         location / {
-            proxy_pass           http://admin;
+            proxy_pass           https://admin;
             proxy_redirect       off;
             proxy_set_header     Host $host;
             proxy_set_header     X-Real-IP $remote_addr;
@@ -31,6 +81,9 @@ http {
             proxy_set_header     X-Forwarded-Host $server_name;
         }
 
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot
+        }
     }
 
     server {
@@ -39,7 +92,7 @@ http {
         server_name api.edanaga.ch;
 
         location / {
-           proxy_pass           http://api;
+           proxy_pass           https://api;
            proxy_redirect       off;
            proxy_set_header     Host $host;
            proxy_set_header     X-Real-IP $remote_addr;
@@ -74,6 +127,10 @@ http {
                 add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag';
            }
         }
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot
+        }
     }
 
     server {
@@ -82,12 +139,16 @@ http {
         server_name edanaga.ch www.edanaga.ch;
 
         location / {
-            proxy_pass           http://unity;
+            proxy_pass           https://unity;
             proxy_redirect       off;
             proxy_set_header     Host $host;
             proxy_set_header     X-Real-IP $remote_addr;
             proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header     X-Forwarded-Host $server_name;
+        }
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot
         }
     }
 }
