--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,11 @@ services:
         image: nginx:alpine
         ports:
             - "80:80"
+            - "443:443"
         volumes:
             - "./nginx/prod.nginx.conf:/etc/nginx/nginx.conf"
+            - "./certbot/conf:/etc/letsencrypt"
+            - "./certbot/www:/var/www/certbot"
         environment:
             - THREADS=${NGINXTHREADCOUNT}
         restart: always
@@ -58,3 +61,9 @@ services:
             - admin
             - api
             - unity
+    certbot:
+        image: certbot/certbot
+        volumes:
+            - "./certbot/conf:/etc/letsencrypt"
+            - "./certbot/www:/var/www/certbot"
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
