--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -19,56 +19,18 @@ http {
 
     # HTTPS redirection
     server {
-        listen 443 ssl;
-
-        server_name admin.edanaga.ch;
-
-        location / {
-            proxy_pass http://admin.edanaga.ch;
-        }
-
-        ssl_certificate /etc/letsencrypt/live/admin.edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/admin.edanaga.ch/privkey.pem;
-
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
-    }
-
-    server {
-        listen 443 ssl;
-
-        server_name api.edanaga.ch;
-
-        location / {
-            proxy_pass http://api.edanaga.ch;
-        }
-
-        ssl_certificate /etc/letsencrypt/live/api.edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.edanaga.ch/privkey.pem;
-
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
-    }
-
-    server {
-        listen 443 ssl;
-
-        server_name edanaga.ch www.edanaga.ch;
-
-        location / {
-            proxy_pass http://edanaga.ch;
-        }
-
-        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
-
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
-    }
-
-    # HTTP applications redirecting to docker containers
-    server {
         listen 80;
+
+        server_name www.edanaga.ch edanaga.ch api.edanaga.ch admin.edanaga.ch;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Serving docker containers
+    server {
+        listen 443 ssl;
 
         server_name admin.edanaga.ch;
 
@@ -84,10 +46,16 @@ http {
         location /.well-known/acme-challenge/ {
             root /var/www/certbot
         }
+
+        ssl_certificate /etc/letsencrypt/live/admin.edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/admin.edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 
     server {
-        listen 80;
+        listen 443 ssl;
 
         server_name api.edanaga.ch;
 
@@ -131,10 +99,16 @@ http {
         location /.well-known/acme-challenge/ {
             root /var/www/certbot
         }
+
+        ssl_certificate /etc/letsencrypt/live/api.edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 
     server {
-        listen 80;
+        listen 443 ssl;
 
         server_name edanaga.ch www.edanaga.ch;
 
@@ -150,5 +124,11 @@ http {
         location /.well-known/acme-challenge/ {
             root /var/www/certbot
         }
+
+        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 }
