redirecting to correct keys

--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -50,8 +50,8 @@ http {
             proxy_set_header     X-Forwarded-Host $server_name;
         }
 
-        ssl_certificate /etc/letsencrypt/live/admin.edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/admin.edanaga.ch/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
     }
 
     server {
@@ -96,8 +96,8 @@ http {
            }
         }
 
-        ssl_certificate /etc/letsencrypt/live/api.edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.edanaga.ch/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
     }
 
     server {
