actual last try

--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -6,9 +6,6 @@ events { worker_connections 1024; }
 http {
     sendfile on;
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
-    
     upstream admin {
         server admin:5000;
     }
@@ -51,8 +48,11 @@ http {
             proxy_set_header     X-Forwarded-Host $server_name;
         }
 
-        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/admin.edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/admin.edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 
     server {
@@ -97,8 +97,11 @@ http {
            }
         }
 
-        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.edanaga.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 
     server {
@@ -117,5 +120,8 @@ http {
 
         ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 }
