--- a/docker-compose.https.yml
+++ b/docker-compose.https.yml
@@ -44,7 +44,6 @@ services:
             - MONGO_INITDB_ROOT_USERNAME=${MONGOUSER}
             - MONGO_INITDB_ROOT_PASSWORD=${MONGOPASS}
         restart: always
-        command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
     nginx:
         image: nginx:alpine
@@ -53,6 +52,8 @@ services:
             - "443:443"
         volumes:
             - "./nginx/prod.nginx.conf:/etc/nginx/nginx.conf"
+            - "./certbot/conf:/etc/letsencrypt"
+            - "./certbot/www:/var/www/certbot"
         environment:
             - THREADS=${NGINXTHREADCOUNT}
         restart: always
@@ -60,3 +61,11 @@ services:
             - admin
             - api
             - unity
+        command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+    certbot:
+        image: certbot/certbot
+        volumes:
+            - "./certbot/conf:/etc/letsencrypt"
+            - "./certbot/www:/var/www/certbot"
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
