--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -1,7 +1,6 @@
-worker_processes ${THREADS};
+worker_processes 2;
 
 events { worker_connections 1024; }
-
 
 http {
     sendfile on;
@@ -18,29 +17,13 @@ http {
         server unity:5000;
     }
 
-    # HTTPS redirection
     server {
         listen 80;
-
-        server_name www.edanaga.ch edanaga.ch api.edanaga.ch admin.edanaga.ch;
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot
-        }
-    }
-
-    # Serving docker containers
-    server {
-        listen 443 ssl;
 
         server_name admin.edanaga.ch;
 
         location / {
-            proxy_pass           https://admin;
+            proxy_pass           http://admin;
             proxy_redirect       off;
             proxy_set_header     Host $host;
             proxy_set_header     X-Real-IP $remote_addr;
@@ -48,33 +31,29 @@ http {
             proxy_set_header     X-Forwarded-Host $server_name;
         }
 
-        ssl_certificate /etc/letsencrypt/live/admin.edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/admin.edanaga.ch/privkey.pem;
-
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 
     server {
-        listen 443 ssl;
+        listen 80;
 
         server_name api.edanaga.ch;
 
         location / {
-           proxy_pass           https://api;
+           proxy_pass           http://api;
            proxy_redirect       off;
            proxy_set_header     Host $host;
            proxy_set_header     X-Real-IP $remote_addr;
            proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header     X-Forwarded-Host $server_name;
 
-           if ($request_method = 'OPTIONS') {
+	   if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 #
                 # Custom headers and headers various browsers *should* be OK with but aren't
                 #
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-
+Modified-Since,Cache-Control,Content-Type,Range';
                 #
                 # Tell client that this pre-flight info is valid for 20 days
                 #
@@ -86,42 +65,33 @@ http {
            if ($request_method = 'POST') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-
+Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag'
+;
            }
            if ($request_method = 'GET') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-
+Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag'
+;
            }
         }
-
-        ssl_certificate /etc/letsencrypt/live/api.edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.edanaga.ch/privkey.pem;
-
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
-
     server {
-        listen 443 ssl;
+        listen 80;
 
         server_name edanaga.ch www.edanaga.ch;
 
         location / {
-            proxy_pass           https://unity;
+            proxy_pass           http://unity;
             proxy_redirect       off;
             proxy_set_header     Host $host;
             proxy_set_header     X-Real-IP $remote_addr;
             proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header     X-Forwarded-Host $server_name;
         }
-
-        ssl_certificate /etc/letsencrypt/live/edanaga.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/edanaga.ch/privkey.pem;
-
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
     }
 }
