--- a/unity/Dockerfile
+++ b/unity/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8.3-buster
 
 WORKDIR /opt/source-code
 
-COPY ./ ./
+COPY ./app ./
 
 # find a way to pull latest unity release from other repo
 
