added admin user environment variables and integrated them in admin application to set up for migrations

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,8 @@ services:
             - MONGOHOST=${MONGOHOST}
             - SECRET_KEY=${ADMIN_SECRET_KEY}
             - SECURITY_PASSWORD_SALT=${ADMIN_SECURITY_SALT}
+            - ADMINUSER=${ADMINUSER}
+            - ADMINPASS=${ADMINPASS}
         depends_on:
             - db
     api:
