--- a/docker-compose.https.yml
+++ b/docker-compose.https.yml
@@ -12,6 +12,8 @@ services:
             - MONGOHOST=${MONGOHOST}
             - SECRET_KEY=${ADMIN_SECRET_KEY}
             - SECURITY_PASSWORD_SALT=${ADMIN_SECURITY_SALT}
+            - ADMINUSER=${ADMINUSER}
+            - ADMINPASS=${ADMINPASS}
         restart: always
         depends_on:
             - db
