--- a/nginx/prod.nginx.conf
+++ b/nginx/prod.nginx.conf
@@ -46,15 +46,21 @@ http {
            proxy_set_header     X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header     X-Forwarded-Host $server_name;
 
-           add_header 'Access-Control-Allow-Origin' '*';
-           add_header 'Access-Control-Allow-Methods' '*';
-           add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+           add_header 'Access-Control-Allow-Credentials' 'true';
+           add_header 'Access-Control-Allow-Origin' '*' always;
+           add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS' always;
+           add_header 'Access-Control-Allow-Headers' 'Accept,X-Access-Token,X-Application-Name,X-Request-Sent-Time,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag';
            if ($request_method = 'OPTIONS') {
+           add_header 'Access-Control-Allow-Credentials' 'true';
+           add_header 'Access-Control-Allow-Origin' '*' always;
+           add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS' always;
+           add_header 'Access-Control-Allow-Headers' 'Accept,X-Access-Token,X-Application-Name,X-Request-Sent-Time,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+           add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range,Etag';
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Type' 'text/plain; charset=utf-8';
                 add_header 'Content-Length' 0;
-                return 204;
+                #return 204;
            }
         }
     }
